# sanitarr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  entrypoint.sh  example.config.toml  readme.md
.github/: FUNDING.yml  release.yml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  logging.rs  main.rs  movies_cleaner.rs  series_cleaner.rs
src/cleaners/: episodes.rs  mod.rs  movies.rs  series.rs  utils.rs
src/http/: deluge_client.rs  jellyfin_client.rs  mod.rs  qbittorrent_client.rs  radarr_client.rs  sonarr_client.rs
src/http/download_clients/: deluge.rs  mod.rs  qbittorrent.rs
src/http/torrent_clients/: deluge.rs  mod.rs  qbittorrent.rs
src/services/: download_client.rs  download_service.rs  jellyfin.rs  mod.rs  radarr.rs  sonarr.rs
